app/media-server/emby/emby-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emby
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - name: emby
        image: docker.io/emby/embyserver:4.9.0.32
        imagePullPolicy: Always
        resources: {}
        volumeMounts:
        - name: emby-config
          mountPath: /config
        - name: nfs-vol
          mountPath: /downloads # The mountpoint inside the container
        ports:
        - containerPort: 8096
        - containerPort: 8920
      restartPolicy: Always
      volumes:
        - name: emby-config
          persistentVolumeClaim:
            claimName: emby-config
        - name: nfs-vol
          nfs:
            server: 192.168.0.21 # IP to our NFS server
            path: /media/ # The path to our NFS share # The exported directory
