app/media-server/emby/emby-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emby
spec:
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
    name: http
  - port: 8920
    protocol: TCP
    targetPort: 8920
    name: https
  selector:
    app: emby
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
